# Lamia

./: .gitignore  .gitignore.sha256  BUILD_VALIDATION.md  BUILD_VALIDATION.md.sha256  CMakeLists.txt  CMakeLists.txt.sha256  CMakePresets.json  CMakePresets.json.sha256  COMPILATION_READY.md  COMPILATION_READY.md.sha256  Construct Primers.txt  Construct Primers.txt.sha256  DEPLOYMENT_VALIDATION.md  DEPLOYMENT_VALIDATION.md.sha256  FINAL_VERIFICATION.md  FINAL_VERIFICATION.md.sha256  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md.sha256  LAMIA_AUDIT_SUMMARY.md  LAMIA_AUDIT_SUMMARY.md.sha256  LAMIA_ENHANCED_v0.3.0c_SUMMARY.md  LAMIA_ENHANCED_v0.3.0c_SUMMARY.md.sha256  LAMIA_MARKET_READY_SUMMARY.md.sha256  LICENSE  LICENSE.sha256  LICENSING_DEPLOYMENT_GUIDE.md.sha256  LICENSING_IMPLEMENTATION_COMPLETE.md.sha256  LICENSING_INTEGRATION_UPDATE.md.sha256  LICENSING_LAMIA_DEPLOYMENT.md.sha256  Processors.txt  Processors.txt.sha256  README.md  README.md.sha256  README_LICENSING_SYSTEM.md.sha256  RevolutionaryManufacturingDemo_manufacturing.lamia.sha256  VALIDATION_REPORT.md  VALIDATION_REPORT.md.sha256  benchmark_api_gateway.bat  benchmark_api_gateway.bat.sha256  compile.bat  (+218 more)
Lamia-Docs/: CHANGELOG.md.sha256  CONTRIBUTING.md  CONTRIBUTING.md.sha256  README.md.sha256  _config.yml.sha256  build_docs.sh.sha256  index.md.sha256
Lamia-Docs/api/: README.md.sha256  ai_command_orchestrator.md.sha256  api_gateway_complete.md.sha256  arduino_bridge.md.sha256  cnc_bridge.md.sha256  collective_borg.md.sha256  deployment_complete.md.sha256  dual_process_segmentation.md.sha256  iot_bridge.md.sha256  lamia_3d_emotion.md.sha256  lamia_analytics_engine.md.sha256  lamia_blockchain_core.md.sha256  lamia_cloud_native.md.sha256  lamia_concurrency_core.md.sha256  lamia_core.md.sha256  lamia_crystal_system.md.sha256  lamia_edge_computing.md.sha256  lamia_gcode_native.md.sha256  lamia_lexer.md.sha256  lamia_ludicrous_mode.md.sha256  lamia_manifest_engine.md.sha256  lamia_memory_optimizer.md.sha256  lamia_neural_interface.md.sha256  lamia_quantum_bridges.md.sha256  lamia_realtime_engine.md.sha256  lamia_revolutionary_framework.md.sha256  lamia_security_layer.md.sha256  lamia_social_protocols.md.sha256  lamia_transpiler.md.sha256  marketplace_gamification.md.sha256  medusa_universal_database_connector.md.sha256  nanotech.md.sha256  picard_orchestrator.md.sha256  reconstructar_core.md.sha256  reproducible_plan_system.md.sha256  sevenofnine_viewer.md.sha256  smudger_healing.md.sha256  universal_3d_interface.md.sha256  xml_mutation_engine.md.sha256
Lamia-Docs/architecture/: overview.md.sha256
Lamia-Docs/benchmarks/: performance.md.sha256
Lamia-Docs/examples/: 01_basic.lamia.sha256  02_manufacturing.lamia.sha256  03_arduino.lamia.sha256  04_emotion.lamia.sha256  README.md.sha256
Lamia-Docs/guides/: getting-started.md  getting-started.md.sha256
Lamia-Docs/specs/: manifest-language.md.sha256
Lamia-Libs/: LIBRARY_CATALOG_V030C.md.sha256  LIBRARY_ORGANIZATION_SUMMARY.md.sha256  README.md  README.md.sha256
Lamia-Libs/include/: MEDUSASERV_PATHING_ENGINE.hpp.sha256  MEDUSASERV_SSL_MANAGER.hpp.sha256  MEDUSASERV_SSL_VERBOSE_ENGINE.hpp.sha256  MedusaAuthenticationSystem.hpp.sha256  MedusaDatabaseManager.hpp.sha256  MedusaEncryption.hpp  MedusaEncryption.hpp.sha256  MedusaGroundUpSecurity.hpp.sha256  MedusaServDependencyInterlinker.hpp.sha256  MedusaTriforceDatabase.hpp.sha256  MedusaUnifiedServer.hpp.sha256  SUBDOMAIN_MANAGER.hpp.sha256  fake_database.h.sha256  intelligent_interlinking_system.hpp.sha256  lamia_language_specification.hpp.sha256  lamia_minimal.hpp.sha256  libmedusa_encryption.h.sha256  medusa_editor.h.sha256  medusa_security.h.sha256  medusaserv_compatibility_engine.hpp.sha256  medusaserv_core_engine.hpp.sha256  medusaserv_security_core.hpp.sha256  mongodb_impl.hpp.sha256  pg_impl.hpp.sha256  security_backbone.hpp.sha256
Lamia-Libs/src/: MEDUSASERV_PATHING_ENGINE.cpp.sha256  MEDUSASERV_SSL_MANAGER.cpp.sha256  MEDUSASERV_SSL_VERBOSE_ENGINE.cpp.sha256  SUBDOMAIN_MANAGER.cpp.sha256  advanced_ssl_manager_native.cpp.sha256  jwt_session_management_triforce_native.cpp.sha256  medusaserv_compatibility_engine.cpp.sha256  medusaserv_core_engine.cpp.sha256  medusaserv_http_engine.cpp.sha256  medusaserv_security_core.cpp.sha256  military_grade_security_fortress_native.cpp.sha256
Lamia-Plugins/api/: plugin_manager.hpp.sha256
Lamia-Plugins/docs/: README.md.sha256
Lamia-Plugins/installer/: install.sh.sha256
Lamia-Plugins/registry/: marketplace.json.sha256
Lamia-Plugins/website/: index.html.sha256
audits/: stall_config.json  stall_config.json.sha256
cmake/: LamiaCxx26.cmake  LamiaCxx26.cmake.sha256
docs/: BEGINNERS_GUIDE.md  BEGINNERS_GUIDE.md.sha256
docs/language/: BUILD.md  BUILD.md.sha256  CHANGELOG_0.5.0.md  CHANGELOG_0.5.0.md.sha256  LAMIA_0_5_0_README.md  LAMIA_0_5_0_README.md.sha256  OPTIONS.md  OPTIONS.md.sha256
docs/manifests/: CANONICAL_DEPENDENCY_ROOTS.md  CANONICAL_DEPENDENCY_ROOTS.md.sha256  LAMIA_ECOSYSTEM_REFERENCE_MAP.md  LAMIA_ECOSYSTEM_REFERENCE_MAP.md.sha256  LAMIA_SOURCE_CARRY_FORWARD_MANIFEST.md  LAMIA_SOURCE_CARRY_FORWARD_MANIFEST.md.sha256  dependency_roots.json  dependency_roots.json.sha256
docs/policies/: CXX26_TOOLCHAIN_POLICY.md  CXX26_TOOLCHAIN_POLICY.md.sha256  LAMIA_REPO_CONSOLIDATION_POLICY.md  LAMIA_REPO_CONSOLIDATION_POLICY.md.sha256  SHARED_LIBRARY_BOUNDARIES.md  SHARED_LIBRARY_BOUNDARIES.md.sha256
docs/primers/: CONSTRUCT_PRIMERS.md  CONSTRUCT_PRIMERS.md.sha256  ENTITY_PROCESSORS.md  ENTITY_PROCESSORS.md.sha256  my model.txt  my model.txt.sha256
include/curl/: curl.h
include/openssl/: evp.h  sha.h
lib/3d_emotions/: API_REFERENCE.md  EXAMPLES.md  (+5 more)
manufacturing_bridges/: Makefile  Makefile.sha256  arduino_bridge.cpp.sha256  arduino_bridge.hpp.sha256  cnc_bridge.cpp.sha256  cnc_bridge.hpp.sha256  iot_bridge.cpp.sha256  iot_bridge.hpp.sha256
mod_lamia/: Makefile  Makefile.sha256  README.md  README.md.sha256  medusaserv_auth_fixed.cpp.sha256
scripts/: deploy_secure.sh.sha256  start_secure.sh.sha256
tools/: lamia_open.cpp  lamia_open.cpp.sha256
(+15 files in other folders)
